10986
{code}
object line1 {
  trait MyTrait
}
object line2 {
  import line2._
  class BugTest {def isTheBugHere(in: MyTrait.this.type#SomeData) = false}
}
{code}

{noformat}
scalac-hash v2.11.0-M3~17 sandbox/test.scala
sandbox/test.scala:6: error: MyTrait is not an enclosing class
  class BugTest {def isTheBugHere(in: MyTrait.this.type#SomeData) = false}
                                      ^
one error found

% scalac-hash v2.11.0-M3~16 sandbox/test.scala
sandbox/test.scala:6: error: MyTrait is not an enclosing class
  class BugTest {def isTheBugHere(in: MyTrait.this.type#SomeData) = false}
                                      ^
uncaught exception during compilation: AssertionError("assertion failed: <error: value <error: <none>>>.this") @ scala.reflect.internal.Trees$SelectFromTypeTree.<init>(Trees.scala:502)
error: java.lang.AssertionError: assertion failed: <error: value <error: <none>>>.this
error:
{noformat}
